--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/ress.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://9mak.github.io/Portfolio/css/ress.css">
+  <link rel="stylesheet" href="https://9mak.github.io/Portfolio/css/style.css">
   <title>Kazuki Oguma</title>
 </head>
 <body>
