replace img path

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <!-- img -->
-    <img class="top-image" src="/img/top.JPG" alt="" width="94%" height="100%">
+    <img class="top-image" src="https://9mak.github.io/Portfolio/img/top.JPG" alt="" width="94%" height="100%">
 
     <!-- main -->
     <main class="main">
@@ -47,7 +47,7 @@
       <section class="works">
         <a href="#" class="works__item">
           <dt>
-            <img src="/img/top.JPG" alt="works__item__image" width="100%">
+            <img src="https://9mak.github.io/Portfolio/img/top.JPG" alt="works__item__image" width="100%">
           </dt>
           <dd class="works__item__text"> 
             <h3>title</h3>
@@ -57,7 +57,7 @@
 
         <a href="#" class="works__item">
           <dt>
-            <img src="/img/top.JPG" alt="works__item__image" width="100%">
+            <img src="https://9mak.github.io/Portfolio/img/top.JPG" alt="works__item__image" width="100%">
           </dt>
           <dd class="works__item__text">
             <h3>title</h3>
@@ -67,7 +67,7 @@
 
         <a href="#" class="works__item">
           <dt>
-            <img src="/img/top.JPG" alt="works__item__image" width="100%">
+            <img src="https://9mak.github.io/Portfolio/img/top.JPG" alt="works__item__image" width="100%">
           </dt>
           <dd class="works__item__text">
             <h3>title</h3>
@@ -83,7 +83,7 @@
       <section class="about">
         <h3 class="about__title">Me</h3>
         <div class="me">
-          <img src="/img/4620693218529317417.3af758330271cf04f47fe49bba703a74.20101410.jpg" alt="" class="me__image" width="90%">
+          <img src="https://9mak.github.io/Portfolio/img/4620693218529317417.3af758330271cf04f47fe49bba703a74.20101410.jpg" alt="" class="me__image" width="90%">
 
           <div class="me__profile">
             <h3>自己紹介</h3>
