--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://9mak.github.io/Portfolio/css/ress.css">
+
+  <!-- Github -->
   <link rel="stylesheet" href="https://9mak.github.io/Portfolio/css/style.css">
+  <script src="https://9mak.github.io/Portfolio/script.js"></script>
+
+  <!-- Local -->
+  <!-- <link rel="stylesheet" href="/css/style.css">
+  <script src="/script.js"></script> -->
+
   <title>Kazuki Oguma</title>
 </head>
 <body>
@@ -41,6 +49,8 @@
     <!-- main -->
     <main class="main">
       <div class="separate"></div>
+
+      <!-- works -->
       <h2 id="works" class="title">
         Works
       </h2>
@@ -50,8 +60,7 @@
             <img src="https://9mak.github.io/Portfolio/img/top.JPG" alt="works__item__image" width="100%">
           </dt>
           <dd class="works__item__text"> 
-            <h3>title</h3>
-            <p>test</p>
+            <h3>One</h3>
           </dd>
         </a>
 
@@ -60,8 +69,7 @@
             <img src="https://9mak.github.io/Portfolio/img/top.JPG" alt="works__item__image" width="100%">
           </dt>
           <dd class="works__item__text">
-            <h3>title</h3>
-            <p>test</p>
+            <h3>Two</h3>
           </dd>
         </a>
 
@@ -70,18 +78,18 @@
             <img src="https://9mak.github.io/Portfolio/img/top.JPG" alt="works__item__image" width="100%">
           </dt>
           <dd class="works__item__text">
-            <h3>title</h3>
-            <p>test</p>
+            <h3>Three</h3>
           </dd>
         </a>
       </section>
 
+      <!-- about -->
       <div class="separate"></div>
       <h2 id="about" class="title">
         About
       </h2>
       <section class="about">
-        <h3 class="about__title">Me</h3>
+        <!-- <h3 class="about__title">Me</h3> -->
         <div class="me">
           <img src="https://9mak.github.io/Portfolio/img/4620693218529317417.3af758330271cf04f47fe49bba703a74.20101410.jpg" alt="" class="me__image" width="90%">
 
@@ -108,7 +116,7 @@
           </div>
         </div>
 
-        <h3 class="about__title">Skill</h3>
+        <!-- <h3 class="about__title">Skill</h3> -->
         <div class="skill">
           <div class="skill__HTML">
             <h3>HTML</h3>
@@ -142,6 +150,7 @@
         </div>
       </section>
 
+      <!-- contact -->
       <div class="separate"></div>
       <h2 id="contact" class="title">
         Contact
@@ -159,7 +168,7 @@
           <label class="contact__form__label" for="address">
             ご連絡先
           </label>
-          <input class="contact__form__input" type="text" id="mail" name="firstname" placeholder="Your address..">
+          <input class="contact__form__input" type="text" id="address" name="firstname" placeholder="Your address..">
 
           <label class="contact__form__label" for="subject">
             お問い合わせ内容
@@ -176,7 +185,7 @@
       <nav class="nav social">
         <ul class="nav__list">
           <li class="nav__list___item">
-            <a href="https://www.instagram.com/_9ma.k___" class="nav__list__item-insta">Instagram</a>
+            <a href="https://www.instagram.com/svtltv2" class="nav__list__item-insta">Instagram</a>
           </li>
           <li class="nav__list___item">
             <a href="https://twitter.com/_9mak___" class="nav__list__item-twitter">Twitter</a>
@@ -184,6 +193,7 @@
         </ul>
       </nav>
 
+      <!-- copyright -->
       <div class="copy">
         <small>© Kazuki Oguma All rights reserved.</small>
       </div>
