--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- Github -->
   <link rel="stylesheet" href="https://9mak.github.io/Portfolio/css/style.css">
   <script src="https://9mak.github.io/Portfolio/script.js"></script>
+  <link rel="icon" type="image/x-icon" href="./img/icon.png">
 
   <!-- Local -->
   <!-- <link rel="stylesheet" href="/css/style.css">
