--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://9mak.github.io/Portfolio/css/ress.css">
-
-  <!-- Github -->
-  <link rel="stylesheet" href="https://9mak.github.io/Portfolio/css/style.css">
-  <script src="https://9mak.github.io/Portfolio/script.js"></script>
+  <link rel="stylesheet" href="./css/ress.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <script src="./script.js"></script>
   <link rel="icon" type="image/x-icon" href="./img/icon.png">
-
-  <!-- Local -->
-  <!-- <link rel="stylesheet" href="/css/style.css">
-  <script src="/script.js"></script> -->
-
   <title>Kazuki Oguma</title>
 </head>
 <body>
@@ -45,7 +38,7 @@
     </header>
 
     <!-- img -->
-    <img class="top-image" src="https://9mak.github.io/Portfolio/img/000027.jpg" alt="" width="94%" height="100%">
+    <img class="top-image" src="./img/top.jpg" alt="" width="94%" height="100%">
 
     <!-- main -->
     <main class="main">
@@ -58,7 +51,7 @@
       <section class="works">
         <a href="#" class="works__item">
           <dt>
-            <img src="https://9mak.github.io/Portfolio/img/top.JPG" alt="works__item__image" width="100%">
+            <img src="./img/neko.JPG" alt="works__item__image" width="100%">
           </dt>
           <dd class="works__item__text"> 
             <h3>One</h3>
@@ -67,7 +60,7 @@
 
         <a href="#" class="works__item">
           <dt>
-            <img src="https://9mak.github.io/Portfolio/img/top.JPG" alt="works__item__image" width="100%">
+            <img src="./img/neko.JPG" alt="works__item__image" width="100%">
           </dt>
           <dd class="works__item__text">
             <h3>Two</h3>
@@ -76,7 +69,7 @@
 
         <a href="#" class="works__item">
           <dt>
-            <img src="https://9mak.github.io/Portfolio/img/top.JPG" alt="works__item__image" width="100%">
+            <img src="./img/neko.JPG" alt="works__item__image" width="100%">
           </dt>
           <dd class="works__item__text">
             <h3>Three</h3>
@@ -89,64 +82,64 @@
       <h2 id="about" class="title">
         About
       </h2>
+
       <section class="about">
-        <!-- <h3 class="about__title">Me</h3> -->
-        <div class="me">
-          <img src="https://9mak.github.io/Portfolio/img/4620693218529317417.3af758330271cf04f47fe49bba703a74.20101410.jpg" alt="" class="me__image" width="90%">
+        <div class="about__me">
 
-          <div class="me__profile">
+          <div class="about__me__profile">
             <h3>自己紹介</h3>
             <p>誕生日：1994年9月19日</p>
             <p>血液型：A型</p>
-            <p>趣味：落語、文楽、読書、スポーツ観戦</p>
-            <p>尊敬する人物：ジョン・F・ケネディ</p>
+            <p>趣味：多趣味</p>
+            <p>尊敬する人物：ひいばあちゃん</p>
             <p>好きな言葉：「器用貧乏」</p>
-            <p>長所：粘り強いこと</p>
+            <p>長所：誰にでも優しく粘り強いこと</p>
             <p>短所：涙もろいところ</p>
           </div>
 
-          <div class="me__history">
+          <div class="about__me__history">
             <h3>自己紹介</h3>
             <p>誕生日：1994年9月19日</p>
             <p>血液型：A型</p>
-            <p>趣味：落語、文楽、読書、スポーツ観戦</p>
-            <p>尊敬する人物：ジョン・F・ケネディ</p>
+            <p>趣味：多趣味</p>
+            <p>尊敬する人物：ひいばあちゃん</p>
             <p>好きな言葉：「器用貧乏」</p>
-            <p>長所：粘り強いこと</p>
+            <p>長所：誰にでも優しく粘り強いこと</p>
             <p>短所：涙もろいところ</p>
           </div>
+          <img src="./img/me.jpg" alt="" class="about__img" width="100%" height="auto">
         </div>
 
         <!-- <h3 class="about__title">Skill</h3> -->
-        <div class="skill">
-          <div class="skill__HTML">
-            <h3>HTML</h3>
-            <p></p>
+        <div class="about__skill">
+          <div class="about__skill-HTML">
+            <!-- HTML -->
+            <img src="/img/skill/html5.svg" alt="" width="230" height="auto">
           </div>
 
-          <div class="skill__CSS">
-            <h3>CSS</h3>
-            <p></p>
+          <div class="about__skill-CSS">
+            <!-- CSS -->
+            <img src="/img/skill/css3.svg" alt="" width="200" height="auto">
           </div>
 
-          <div class="slill__JavaScript">
-            <h3>JavaScript</h3>
-            <p></p>
+          <div class="about__skill-JavaScript">
+            <!-- JavaScript -->
+            <img src="/img/skill/javascript.svg" alt="" width="200" height="auto">
           </div>
 
-          <div class="skill__Sass">
-            <h3>Sass</h3>
-            <p></p>
+          <div class="about__skill-Sass">
+            <!-- Sass -->
+            <img src="/img/skill/sass.svg" alt="" width="200" height="100%">
           </div>
 
-          <div class="skill__Git">
-            <h3>Git</h3>
-            <p></p>
+          <div class="about__skill-Git">
+            <!-- Git -->
+            <img src="/img/skill/github.svg" alt="" width="200" height="100%">
           </div>
 
-          <div class="slill__Python">
-            <h3>Python</h3>
-            <p></p>
+          <div class="about__slill-Python">
+            <!-- python -->
+            <img src="/img/skill/python.svg" alt="" width="200" height="100%">
           </div>
         </div>
       </section>
