--- a/index.html
+++ b/index.html
@@ -114,32 +114,32 @@
         <div class="about__skill">
           <div class="about__skill-HTML">
             <!-- HTML -->
-            <img src="/img/skill/html5.svg" alt="" width="230" height="auto">
+            <img src="./img/skill/html5.svg" alt="" width="230" height="auto">
           </div>
 
           <div class="about__skill-CSS">
             <!-- CSS -->
-            <img src="/img/skill/css3.svg" alt="" width="200" height="auto">
+            <img src="./img/skill/css3.svg" alt="" width="200" height="auto">
           </div>
 
           <div class="about__skill-JavaScript">
             <!-- JavaScript -->
-            <img src="/img/skill/javascript.svg" alt="" width="200" height="auto">
+            <img src="./img/skill/javascript.svg" alt="" width="200" height="auto">
           </div>
 
           <div class="about__skill-Sass">
             <!-- Sass -->
-            <img src="/img/skill/sass.svg" alt="" width="200" height="100%">
+            <img src="./img/skill/sass.svg" alt="" width="200" height="100%">
           </div>
 
           <div class="about__skill-Git">
             <!-- Git -->
-            <img src="/img/skill/github.svg" alt="" width="200" height="100%">
+            <img src="./img/skill/github.svg" alt="" width="200" height="100%">
           </div>
 
           <div class="about__slill-Python">
             <!-- python -->
-            <img src="/img/skill/python.svg" alt="" width="200" height="100%">
+            <img src="./img/skill/python.svg" alt="" width="200" height="100%">
           </div>
         </div>
       </section>
