--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <!-- img -->
-    <img class="top-image" src="./img/top.jpg" alt="" width="94%" height="100%">
+    <img class="top-image" src="./img/top.JPG" alt="" width="94%" height="100%">
 
     <!-- main -->
     <main class="main">
@@ -112,33 +112,33 @@
 
         <!-- <h3 class="about__title">Skill</h3> -->
         <div class="about__skill">
+          <!-- HTML -->
           <div class="about__skill-HTML">
-            <!-- HTML -->
             <img src="./img/skill/html5.svg" alt="" width="230" height="auto">
           </div>
 
+          <!-- CSS -->
           <div class="about__skill-CSS">
-            <!-- CSS -->
             <img src="./img/skill/css3.svg" alt="" width="200" height="auto">
           </div>
 
+          <!-- JavaScript -->
           <div class="about__skill-JavaScript">
-            <!-- JavaScript -->
             <img src="./img/skill/javascript.svg" alt="" width="200" height="auto">
           </div>
 
+          <!-- Sass -->
           <div class="about__skill-Sass">
-            <!-- Sass -->
             <img src="./img/skill/sass.svg" alt="" width="200" height="100%">
           </div>
 
+          <!-- Git -->
           <div class="about__skill-Git">
-            <!-- Git -->
             <img src="./img/skill/github.svg" alt="" width="200" height="100%">
           </div>
 
+          <!-- python -->
           <div class="about__slill-Python">
-            <!-- python -->
             <img src="./img/skill/python.svg" alt="" width="200" height="100%">
           </div>
         </div>
