--- a/LIST/TYPE/001_コーポレートサイト/index.html
+++ b/LIST/TYPE/001_コーポレートサイト/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
-
+<html class="no-js" lang="ja">
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -18,14 +17,205 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
-
 <body>
+  <header class="header">
+    <img class="image" src="/img/top_kv.jpg" alt="" width="100%" height="auto">
+    <h1 class="text">
+      <p>未来の</p>
+      <p>おいしいを</p>
+      <p>つくる。</p>
+    </h1>
+    <div class="container">
+      <div class="logo">
+        <a href="#"><img src="/img/logo.svg" alt="" width="50%" height="auto"></a>
+      </div>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__list__item"><a href="#" class="nav__list__item--nomal">TOP</a></li>
+          <li class="nav__list__item"><a href="#" class="nav__list__item--nomal">企業情報</a></li>
+          <li class="nav__list__item"><a href="#" class="nav__list__item--nomal">事業情報</a></li>
+          <li class="nav__list__item"><a href="#" class="nav__list__item--nomal">アクセス</a></li>
+          <li class="nav__list__item"><a href="#" class="nav__list__item--nomal">採用情報</a></li>
+          <li class="nav__list__item"><a href="#" class="nav__list__item--black">お問い合わせ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="main">
+    <section class="state">
+      <!-- message -->
+      <div class="state__container">
+        <div class="state__container__text">
+          <h2 class="state__container__text-title">STATEMENT</h2>
+          <h3 class="state__container__text-item">
+            <p>舞台ファームは食と人と農業の未来のために</p>
+            <p>美味しい食の安心、安全、安定を</p>
+            <p>新しく創り続ける会社です。</p>
+          </h3>
+        </div>
+        <img class="state__container__image" src="/img/statement_image.jpg" alt="" width="90%" height="auto">
+      </div>
+    </section>
+
+    <section class="business">
+      <!-- business -->
+      <div class="business__container-first">
+        <h3>BUSINESS</h3>
+        <h2>事業情報</h2>
+        <a href="#">事業情報TOP</a>
+      </div>
+      <div class="business__container-second">
+        <div class="prod">
+          <a href="#">
+            <img src="/img/navi_image06.jpg" alt="" width="100%" height="auto">
+          </a>
+        </div>
+        <div class="serv">
+          <a href="#">
+            <img src="/img/navi_image07.jpg" alt="" width="100%" height="auto">
+          </a>
+        </div>
+        <div class="agri">
+          <a href="#">
+            <img src="/img/navi_image08.jpg" alt="" width="100%" height="auto">
+          </a>
+        </div>
+        <div class="cons">
+          <a href="#">
+            <img src="/img/navi_image09.jpg" alt="" width="100%" height="auto">
+          </a>
+        </div>
+        <div class="deve">
+          <a href="#">
+            <img src="/img/navi_image10.jpg" alt="" width="100%" height="auto">
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section class="about">
+      <!-- about -->
+      <div class="about__container-first">
+        <h3>ABOUT</h3>
+        <h2>舞台ファームについて</h2>
+      </div>
+      <div class="about__container-second">
+        <a href="#" class="toha"><img src="/img/about_image01.jpg" alt="" width="100%" height="auto"></a>
+        <a href="#" class="mirai"><img src="/img/about_image02.jpg" alt="" width="100%" height="auto"></a>
+        <a href="#" class="riku"><img src="/img/about_image03.jpg" alt="" width="100%" height="auto"></a>
+      </div>
+    </section>
+
+    <section class="news">
+      <!-- news -->
+      <div class="news__container-first">
+        <h3>NEWS</h3>
+        <h2>お知らせ</h2>
+        <a href="">お知らせ一覧</a>
+      </div>
+
+      <div class="news__container-second">
+        <dl>
+          <img src="/img/navi_image05.jpg" alt="">
+          <dt>aa</dt>
+          <dd>gg</dd>
+        </dl>
+        <dl>
+          <img src="/img/navi_image01.jpg" alt="">
+          <dt>aab</dt>
+          <dd>bb</dd>
+        </dl>
+        <dl>
+          <img src="/img/navi_image06.jpg" alt="">
+          <dt>bb</dt>
+          <dd>nn</dd>
+        </dl>
+      </div>
+      <div class="slidshow">
+
+      </div>
+    </section>
+
+    <section class="contact">
+      <!-- contact -->
+      <div class="contact__container">
+        <div class="contact__container__items-first">
+          <h2>contact</h2>
+          <p>お問い合わせは、右記フォームからお願いいたします</p>
+        </div>
+        <button class="contact__container__items-second">お問い合わせ</button>
+        <button class="contact__container__items-third">よくある質問</button>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer__container-first">
+      <div class="logo">
+        <img src="/img/logo.svg" alt="" width="100%" height="40%">
+      </div>
+      <ul>
+        <h2>企業情報</h2>
+        <li><a href="#">ファーム</a></li>
+        <li><a href="#">会社概要</a></li>
+        <li><a href="#">沿革</a></li>
+        <li><a href="#">未来とは？</a></li>
+        <li><a href="#">代表メッセージ</a></li>
+      </ul>
+      <ul>
+        <h2>事業紹介</h2>
+        <li><a href="#">生産</a></li>
+        <li><a href="#">農業サービス</a></li>
+        <li><a href="#">aaa</a></li>
+        <li><a href="#">aaa</a></li>
+        <li><a href="#">aaa</a></li>
+      </ul>
+      <ul>
+        <h2>採用情報</h2>
+        <li><a href="#">aaa</a></li>
+        <li><a href="#">aaa</a></li>
+        <li><a href="#">aaa</a></li>
+        <br>
+        <li><a href="#">プライバシーポリシー</a></li>
+        <div class="sns">
+          <a href="" class="facebook">facebook</a>
+          <a href="" class="instagram">instagram</a>
+        </div>
+      </ul>
+    </div>
+
+    <div class="footer__container-second">
+      <div class="kanren">
+        <h3>舞台ファーム関連企業</h3>
+        <a href="#">aaa</a>
+        <a href="#">aaa</a>
+        <a href="#">aaa</a>
+      </div>
+      <div class="sityo">
+        <h3>農業連携市町村</h3>
+        <a href="#">aaa</a>
+        <a href="#">aaa</a>
+        <a href="#">aaa</a>
+        <a href="#">aaa</a>
+      </div>
+      <div class="sentei">
+        <h3>「地域未来牽引企業」選定</h3>
+        <a href="#">aaa</a>
+      </div>
+    </div>
+
+    <div class="copy">
+      <small>© 2021 BUTAIFARM All rights Reserved.</small>
+    </div>
+  </footer>
+
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
