--- a/LIST/TYPE/001_コーポレートサイト/index.html
+++ b/LIST/TYPE/001_コーポレートサイト/index.html
@@ -23,15 +23,15 @@
 </head>
 <body>
   <header class="header">
-    <img class="image" src="/img/top_kv.jpg" alt="" width="100%" height="auto">
+    <img class="image" src="/img/pexels-snapwire-412842.jpg" alt="" width="100%" height="30%">
     <h1 class="text">
       <p>未来の</p>
-      <p>おいしいを</p>
+      <p>やさしさを</p>
       <p>つくる。</p>
     </h1>
     <div class="container">
       <div class="logo">
-        <a href="#"><img src="/img/logo.svg" alt="" width="50%" height="auto"></a>
+        <a href="#">有限会社大和合成</a>
       </div>
       <nav class="nav">
         <ul class="nav__list">
@@ -102,7 +102,7 @@
       <!-- about -->
       <div class="about__container-first">
         <h3>ABOUT</h3>
-        <h2>舞台ファームについて</h2>
+        <h2>大和合成について</h2>
       </div>
       <div class="about__container-second">
         <a href="#" class="toha"><img src="/img/about_image01.jpg" alt="" width="100%" height="auto"></a>
@@ -121,19 +121,25 @@
 
       <div class="news__container-second">
         <dl>
-          <img src="/img/navi_image05.jpg" alt="">
-          <dt>aa</dt>
-          <dd>gg</dd>
+          <a href="">
+            <img src="/img/navi_image05.jpg" alt="">
+            <dt>2021年4月24日</dt>
+            <dd>連結子会社の吸収合併に関するお知らせ</dd>
+          </a>
         </dl>
         <dl>
-          <img src="/img/navi_image01.jpg" alt="">
-          <dt>aab</dt>
-          <dd>bb</dd>
+          <a href="">
+            <img src="/img/navi_image01.jpg" alt="">
+            <dt>2021年4月24日</dt>
+            <dd>連結子会社の吸収合併に関するお知らせ</dd>
+          </a>
         </dl>
         <dl>
-          <img src="/img/navi_image06.jpg" alt="">
-          <dt>bb</dt>
-          <dd>nn</dd>
+          <a href="">
+            <img src="/img/navi_image06.jpg" alt="">
+            <dt>2021年4月24日</dt>
+            <dd>連結子会社の吸収合併に関するお知らせ</dd>
+          </a>
         </dl>
       </div>
       <div class="slidshow">
@@ -157,7 +163,7 @@
   <footer class="footer">
     <div class="footer__container-first">
       <div class="logo">
-        <img src="/img/logo.svg" alt="" width="100%" height="40%">
+        株式会社大和合成
       </div>
       <ul>
         <h2>企業情報</h2>
@@ -191,26 +197,26 @@
 
     <div class="footer__container-second">
       <div class="kanren">
-        <h3>舞台ファーム関連企業</h3>
+        <h3>関連企業</h3>
         <a href="#">aaa</a>
         <a href="#">aaa</a>
         <a href="#">aaa</a>
       </div>
       <div class="sityo">
-        <h3>農業連携市町村</h3>
+        <h3>連携市町村</h3>
         <a href="#">aaa</a>
         <a href="#">aaa</a>
         <a href="#">aaa</a>
         <a href="#">aaa</a>
       </div>
       <div class="sentei">
-        <h3>「地域未来牽引企業」選定</h3>
+        <h3>「企業」選定</h3>
         <a href="#">aaa</a>
       </div>
     </div>
 
     <div class="copy">
-      <small>© 2021 BUTAIFARM All rights Reserved.</small>
+      <small>© 2021 DAIWAGOUSEI All rights Reserved.</small>
     </div>
   </footer>
 
