--- a/LIST/TYPE/002_ブランド・サービス/index.html
+++ b/LIST/TYPE/002_ブランド・サービス/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
-
+<html class="no-js" lang="ja">
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -17,12 +16,11 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
-
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,12 +31,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Bridal</a>
+            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            <a class="nav-link" href="#">BRIDAL</a>
             <a class="nav-link" href="#">NEWS</a>
             <a class="nav-link" href="#">SHOP</a>
             <a class="nav-link" href="#">SERVICE</a>
-            <a class="nav-link" href="#">COLLECTION</a>
+            <a class="nav-link" href="#">ABOUT</a>
           </div>
         </div>
       </div>
@@ -84,8 +82,116 @@
     </div>
   </header>
 
+  <main>
+    STANDARD
+    <div class="text-center">
+      <img src="..." class="rounded" alt="...">
+    </div>
+    SEE ALL
+
+    SPECIAL
+    <div class="card-group">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+    SEE ALL
+
+    NEW ARRIVAL
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+      </div>
+    </div>
+
+    BRIDAL
+    <div class="card mb-3" style="max-width: 540px;">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="..." alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">BRIDAL</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">MORE</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <p>SHOP</p>
+    <img src="..." class="img-fluid" alt="...">
+
+    <p>SHOP</p>
+    SERVICE
+    <img src="..." class="img-fluid" alt="...">
+
+    <p>SHOP</p>
+    ABOUT
+    MORE
+
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          insta
+        </div>
+        <div class="col-sm">
+          twitter
+        </div>
+        <div class="col-sm">
+          facebook
+        </div>
+        <div class="col-sm">
+          line
+        </div>
+      </div>
+    </div>
+
+    <div class="copy" style="text-align: center;">
+      <small><p>Copyright©all right reserved</p></small>
+    </div>
+  </footer>
+
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
