--- a/LIST/OTHER/04_aono/index.html
+++ b/LIST/OTHER/04_aono/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>蒼乃建設</title>
-    <link rel="stylesheet" href="/css/ress.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/ress.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="header">
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="logo">
                 <a href="#">
-                    <img src="/img/header_logo.png" alt="header-logo" width="50%">
+                    <img src="./img/header_logo.png" alt="header-logo" width="50%">
                 </a>
             </div>
     
@@ -81,20 +81,20 @@
 
             <div class="container">
                 <div class="item__one">
-                    <img src="/img/building1.png" alt="ビル１" width="84%">
+                    <img src="./img/building1.png" alt="ビル１" width="84%">
                     <h3 class="buil__name">M様邸新築工事</h3>
                     <p class="add__name">埼玉県</p>
                     <button type="button" class="syousai">
-                        <img src="/img/more.png" alt="">
+                        <img src="./img/more.png" alt="">
                     </button>
                 </div>
 
                 <div class="item__two">
-                    <img src="/img/building2.png" alt="ビル２" width="84%">
+                    <img src="./img/building2.png" alt="ビル２" width="84%">
                     <h3 class="buil__name">スカイビル</h3>
                     <p class="add__name">東京都</p>
                     <button type="button" class="syousai">
-                        <img src="/img/more.png" alt="">
+                        <img src="./img/more.png" alt="">
                     </button>
                 </div>
             </div>
@@ -112,17 +112,17 @@
             <div class="container">
                 <div class="heart">
                     <a href="#">
-                        <img src="/img/company.png" alt="">
+                        <img src="./img/company.png" alt="">
                     </a>
                 </div>
                 <div class="recruit">
                     <a href="#">
-                        <img src="/img/recruit.png" alt="">
+                        <img src="./img/recruit.png" alt="">
                     </a>
                 </div>
                 <div class="contact">
                     <a href="#">
-                        <img src="/img/contact.png" alt="">
+                        <img src="./img/contact.png" alt="">
                     </a>
                 </div>
             </div>
@@ -134,7 +134,7 @@
     <footer class="footer">
         <div class="container">
             <h1 class="logo">
-                <img src="/img/footer_logo.png" alt="footer-logo" width="50%">
+                <img src="./img/footer_logo.png" alt="footer-logo" width="50%">
             </h1>
 
             <nav class="nav">
