--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
-  <link href="css/ress.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="img/favicon.ico" />
+  <link href="./css/ress.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="./css/style.css" media="all" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="./img/favicon.ico" />
   <!-- <link rel=”canonical” href=”URLが入る” /> -->
 </head>
 
@@ -97,7 +97,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/skill/css3.svg" alt="" width="88%"></p>
+              <p class="skill-img"><img src="./img/skill/css3.svg" alt="" width="88%"></p>
               <div class="skill-body">
                 <h3 class="skill-name">CSS</h3>
                 <p class="skill-text">
@@ -105,7 +105,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/skill/javascript.svg" alt=""></p>
+              <p class="skill-img"><img src="./img/skill/javascript.svg" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">JavaScript</h3>
                 <p class="skill-text">
@@ -113,7 +113,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/skill/sass.svg" alt=""></p>
+              <p class="skill-img"><img src="./img/skill/sass.svg" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">Sass</h3>
                 <p class="skill-text">
@@ -121,7 +121,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/skill/bootstrap.svg" alt=""></p>
+              <p class="skill-img"><img src="./img/skill/bootstrap.svg" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">Bootstrap</h3>
                 <p class="skill-text">
@@ -129,7 +129,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/skill/python.svg" alt=""></p>
+              <p class="skill-img"><img src="./img/skill/python.svg" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">Python</h3>
                 <p class="skill-text">
