--- a/LIST/TYPE/001_コーポレートサイト/index.html
+++ b/LIST/TYPE/001_コーポレートサイト/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>有限会社大和合成<p>SHOP</p></title>
+  <title>有限会社大和合成</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
